<resources>
    <string name="app_name">2023_02_SUP_RENNES</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="complement">Complement :</string>
    <string name="write_name_here">Write name here</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>